--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- font awesome -->
     <link
       rel="stylesheet"
-      href="./fontawesome-free-5.12.0-web/css/all.min.css"
+      href="./navbar/fontawesome-free-5.12.0-web/css/all.min.css"
     />
     <!-- styles -->
     <link rel="stylesheet" href="./navbar/styles.css" />
@@ -86,6 +86,6 @@
       </div>
     </nav>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script src="./navbar/app.js"></script>
   </body>
 </html>
