added project icon folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="nav-center">
         <!-- nav header -->
         <div class="nav-header">
-          <a href="index.html">Home</a>
+          <a href="index.html" class="john">John 4 Tech</a>
           <button class="nav-toggle">
             <i class="fas fa-bars"></i>
           </button>
@@ -44,15 +44,6 @@
           </li>
           <li>
             <a href="./question/index.html">question</a>
-          </li>
-          <li>
-            <a href="./quiz/index.html">quiz</a>
-          </li>
-          <li>
-            <a href="./review/index.html">rewiew</a>
-          </li>
-          <li>
-            <a href="./sidebar/index.html">sidebar</a>
           </li>
         </ul>
         <!-- social media -->
@@ -85,6 +76,90 @@
         </ul> -->
       </div>
     </nav>
+
+    <!-- page container -->
+    <div class="projectContainer">
+      <!-- each project -->
+      <a href="./lorem/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/lorem.JPG" alt="lorem">
+        </div>
+        <div class="project-title">Lorem</div>
+      </a>
+      <!-- each project end -->
+      <!-- each project -->
+      <a href="./color-flipper/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/color.JPG" alt="lorem">
+        </div>
+        <div class="project-title underline">color</div>
+      </a>
+      <!-- each project end -->
+      <!-- each project -->
+      <a href="./countdown timer/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/countdown.JPG" alt="lorem">
+        </div>
+        <div class="project-title">countdown timer</div>
+      </a>
+      <!-- each project end -->
+      <!-- each project -->
+      <a href="./counter/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/counter.JPG" alt="lorem">
+        </div>
+        <div class="project-title">counter</div>
+      </a>
+      <!-- each project end -->
+      <!-- each project -->
+      <a href="./menu/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/menu.JPG" alt="lorem">
+        </div>
+        <div class="project-title underline">menu</div>
+      </a>
+      <!-- each project end -->
+      <!-- each project -->
+      <a href="./modal/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/modal.JPG" alt="lorem">
+        </div>
+        <div class="project-title">modal</div>
+      </a>
+      <!-- each project end -->
+      <!-- each project -->
+      <a href="./question/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/questions.JPG" alt="lorem">
+        </div>
+        <div class="project-title">question</div>
+      </a>
+      <!-- each project end -->
+      <!-- each project -->
+      <a href="./quiz/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/quiz.JPG" alt="lorem">
+        </div>
+        <div class="project-title">quiz</div>
+      </a>
+      <!-- each project end -->
+      <!-- each project -->
+      <a href="./review/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/review.JPG" alt="lorem">
+        </div>
+        <div class="project-title">Review</div>
+      </a>
+      <!-- each project end -->
+      <!-- each project -->
+      <a href="./sidebar/index.html" class="project">
+        <div class="project-img">
+          <img src="./navbar/img/sidebar.JPG" alt="">
+        </div>
+        <div class="project-title">sidebar</div>
+      </a>
+      <!-- each project end -->
+    </div>
     <!-- javascript -->
     <script src="./navbar/app.js"></script>
   </body>
