--- a/color-flipper/index.html
+++ b/color-flipper/index.html
@@ -6,10 +6,12 @@
     <title>Color Flipper || Simple</title>
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../navbar/fontawesome-free-5.12.0-web/css/all.min.css">
   </head>
   <body>
     <nav>
       <div class="nav-center">
+        <a href="../index.html"><i class="fa fa-arrow-left back"></i></a>
         <h4>color flipper</h4>
         <ul class="nav-links">
           <li><a href="index.html">simple</a></li>
